# lol-signup-discord-bot

./: Cargo.toml
src/: main.rs
src/commands/: create_signup.rs  mod.rs
src/db/: models.rs  queries.rs
