[package]
name = "league-signup-discord-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.40"
clap = { version = "4.5.35", features = ["derive", "env"] }
dotenvy = "0.15.7"
serenity = { version = "0.12.4", features = ["collector"] }
tokio = { version = "1.44.1", features = ["full"] }
